--- a/index.html
+++ b/index.html
@@ -36,23 +36,30 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">FORGE: Force-Guided Exploration for Robust Contact-Rich Manipulation under Uncertainty</h1>
           <div class="is-size-5 publication-authors">
-            <!-- <span class="author-block">
+            <span class="author-block">
               <a href="https://noseworm.github.io">Michael Noseworthy</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="http://groups.csail.mit.edu/rrg/">Nicholas Roy</a><sup>1</sup>,</span>
+              <a href="https://bingjietang718.github.io/">Bingjie Tang</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://research.nvidia.com/person/dieter-fox">Dieter Fox</a><sup>2</sup>,</span>
+              <a href="https://wenbowen123.github.io/">Bowen Wen</a><sup>3</sup>,</span>
             <span class="author-block">
-              <a href="https://research.nvidia.com/person/fabio-ramos">Fabio Ramos</a><sup>2</sup>,</span>
+              <a href="https://ankurhanda.github.io/">Ankur Handa</a><sup>3</sup>,</span>
             <span class="author-block">
-              <a href="https://research.nvidia.com/person/yashraj-narang">Yashraj Narang</a><sup>2</sup>,</span>
+              <a href="http://groups.csail.mit.edu/rrg/">Nicholas Roy</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://research.nvidia.com/person/iretiayo-akinola">Iretiayo Akinola</a><sup>2</sup>,</span> -->
+              <a href="https://research.nvidia.com/person/dieter-fox">Dieter Fox</a><sup>3</sup>,</span>
+            <span class="author-block">
+              <a href="https://research.nvidia.com/person/fabio-ramos">Fabio Ramos</a><sup>3</sup>,</span>
+            <span class="author-block">
+              <a href="https://research.nvidia.com/person/yashraj-narang">Yashraj Narang</a><sup>3</sup>,</span>
+            <span class="author-block">
+              <a href="https://research.nvidia.com/person/iretiayo-akinola">Iretiayo Akinola</a><sup>3</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Massachusetts Institute of Technology</span>
-            <span class="author-block"><sup>2</sup>NVIDIA Research</span>
+            <span class="author-block"><sup>2</sup>University of Southern California</span>
+            <span class="author-block"><sup>3</sup>NVIDIA Research</span>
           </div>
 
           <div class="column has-text-centered">
@@ -87,7 +94,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://noseworm.github.io/forge/"
+                <a href="https://youtu.be/QGe54r0O_PA"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -115,29 +122,23 @@
 </section>
 
 
-<!-- <section class="hero teaser">
+<section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <div class="columns is-centered">
         <div class="column">
-          <video id="teaser" autoplay muted loop playsinline width="100%">
-            <source src="./static/videos/teaser_tactile_insertion_in_the_dark.mp4"
-                    type="video/mp4">
-          </video>
+          <img src="static/images/forge_overview.png" width="90%">
         </div>
         <div class="column">
-          <video id="teaser" autoplay muted loop playsinline width="100%">
-            <source src="./static/videos/teaser_peg_placement_policy_2x.mp4"
-                    type="video/mp4">
-          </video>
+          <img src="./static/videos/pgb_v2_lowres.gif" />
         </div>
       </div>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">FORGE</span> policies demonstrate robustness to physical disturbances and acute illumination changes.
+        <span class="dnerf">FORGE</span> policies enable multi-stage assembly of a planetary gearbox.
       </h2>
     </div>
   </div>
-</section> -->
+</section>
 
 
 <section class="section">
@@ -151,111 +152,42 @@
             We present FORGE, a method that enables sim-to-real transfer of contact-rich manipulation policies in the presence of significant pose uncertainty. FORGE combines a force-threshold mechanism with a dynamics randomization scheme during policy learning in simulation, to enable the robust transfer of the learned policies to the real robot. At deployment, FORGE policies, conditioned on a maximum allowable force threshold, adaptively perform contact-rich tasks while respecting the specified force threshold, regardless of the controller gains. Additionally, FORGE autonomously predicts a termination action, once the task has succeeded. We demonstrate that FORGE can be used to learn a variety of robust contact-rich policies, enabling multi-stage assembly of a  planetary gear system, which requires success across three assembly tasks: nut-threading, insertion, and gear meshing.
           </p>
         </div>
-        <img src="static/images/forge_overview.png" width="100%">
       </div>
     </div>
     <!--/ Abstract. -->
+    <section class="hero teaser">
+      <div class="container is-max-desktop">
+        <div class="hero-body">
+          <div class="columns is-centered">
+            <div class="column">
+              <img src="./static/videos/PegInsertion.gif" />
+            </div>
+            <div class="column">
+              <img src="./static/videos/GearMeshing.gif" />
+            </div>
+            <div class="column">
+              <img src="./static/videos/NutThreading.gif" />
+            </div>
+          </div>
+          <h2 class="subtitle has-text-centered">
+            <span class="dnerf">FORGE</span> is evaluated on three contact-rich tasks: Peg Insertion, Gear Meshing, and Nut Threading.
+          </h2>
+        </div>
+      </div>
+    </section>
 
     <!-- Paper video. -->
-    <!-- <div class="columns is-centered has-text-centered">
+    <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Project Video</h2>
         <div class="publication-video">
-          <iframe src="https://player.vimeo.com/video/836005050?h=4076666d68"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/QGe54r0O_PA?si=7QbjMyQW5KA9puRh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
-    </div> -->
+    </div>
     <!--/ Paper video. -->
   </div>
 </section>
-
-<!-- 
-<section class="section">
-  <div class="container is-max-desktop">
-
-    <div class="columns is-centered has-text-centered">
-        <div class="column is-full-width">
-          <h2 class="title is-3">Tactile-based Peg Placement</h2>
-          <div class="columns is-centered">
-
-            <div class="column">
-              <div class="content">
-                <video id="place_peg_in_dark" autoplay controls muted loop playsinline width="100%">
-                  <source src="./static/videos/placement_robust_to_illumination.mp4"
-                          type="video/mp4">
-                </video>
-              </div>
-            </div>
-
-
-            <div class="column">
-              <div class="content">
-                <video id="place_peg_in_dark" autoplay controls muted loop playsinline width="100%">
-                  <source src="./static/videos/peg_placement_with_disturbance.mp4"
-                          type="video/mp4">
-                </video>
-              </div>
-            </div>
-          </div>
-
-          <div class="content has-text-centered">
-            <p>
-              Placement policy execution with varying placement location, peg-in-hand position, and peg-in-hand orientation.
-            </p>
-            <video id="placement-montage"
-                   controls
-                   muted
-                   preload
-                   playsinline
-                   width="50%">
-              <source src="./static/videos/placement_montage.mp4"
-                      type="video/mp4">
-            </video>
-          </div>
-
-        </div>
-
-    </div>
-
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-full-width">
-        <h2 class="title is-3">Tactile-based Peg Insertion</h2>
-        <div class="columns is-centered">
-
-          <div class="content has-text-centered">
-            <video id="insertion-video"
-                  controls
-                  muted
-                  preload
-                  playsinline
-                  width="75%">
-              <source src="./static/videos/insertion_robust_to_illumination.mp4"
-                      type="video/mp4">
-            </video>
-          </div>
-
-        </div>
-
-        <div class="content has-text-centered">
-          <p>
-            Insertion policy execution with varying socket location, peg-in-hand position, and peg-in-hand orientation.
-          </p>
-          <video id="insertion-montage"
-                  controls
-                  muted
-                  preload
-                  playsinline
-                  width="50%">
-            <source src="./static/videos/insertion_montage.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-
-    </div>
-
-  </div>
-</section> -->
 
 <!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
