--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://noseworm.github.io/forge/"
+                <a href="https://arxiv.org/abs/2408.04587"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
