--- a/index.html
+++ b/index.html
@@ -186,6 +186,18 @@
       </div>
     </div>
     <!--/ Paper video. -->
+
+
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Acknowledgements</h2>
+        <div class="content has-text-justified">
+          <p>
+            This research was sponsored in part by Army Research Labs under the A2I2 program and by NVIDIA. Their support is gratefully appreciated.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
