--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">FORGE: Force-Guided Exploration for Robust Contact-Rich Manipulation under Uncertainty</h1>
+          <h1 class="title is-2 publication-title">FORGE: Force-Guided Exploration for Robust Contact-Rich Manipulation under Uncertainty</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://noseworm.github.io">Michael Noseworthy</a><sup>1</sup>,</span>
@@ -44,6 +44,8 @@
               <a href="https://wenbowen123.github.io/">Bowen Wen</a><sup>3</sup>,</span>
             <span class="author-block">
               <a href="https://ankurhanda.github.io/">Ankur Handa</a><sup>3</sup>,</span>
+            <span class="author-block">
+              <a href="https://scholar.google.com/citations?hl=en&user=E5SR9YcAAAAJ">Chad Kessens</a><sup>4</sup>,</span>
             <span class="author-block">
               <a href="http://groups.csail.mit.edu/rrg/">Nicholas Roy</a><sup>1</sup>,</span>
             <span class="author-block">
@@ -60,6 +62,7 @@
             <span class="author-block"><sup>1</sup>Massachusetts Institute of Technology</span>
             <span class="author-block"><sup>2</sup>University of Southern California</span>
             <span class="author-block"><sup>3</sup>NVIDIA Research</span>
+            <span class="author-block"><sup>4</sup>DEVCOM Army Research Laboratory</span>
           </div>
 
           <div class="column has-text-centered">
@@ -94,7 +97,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://youtu.be/6rULFjEv4Kc"
+                <a href="https://youtu.be/5WveyMyHX48"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -149,12 +152,12 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            We present FORGE, a method that enables sim-to-real transfer of contact-rich manipulation policies in the presence of significant pose uncertainty. FORGE combines a force-threshold mechanism with a dynamics randomization scheme during policy learning in simulation, to enable the robust transfer of the learned policies to the real robot. At deployment, FORGE policies, conditioned on a maximum allowable force threshold, adaptively perform contact-rich tasks while respecting the specified force threshold, regardless of the controller gains. Additionally, FORGE autonomously predicts a termination action, once the task has succeeded. We demonstrate that FORGE can be used to learn a variety of robust contact-rich policies, enabling multi-stage assembly of a  planetary gear system, which requires success across three assembly tasks: nut-threading, insertion, and gear meshing.
+            We present FORGE, a method for sim-to-real transfer of force-aware manipulation policies in the presence of significant pose uncertainty. During simulation-based policy learning, FORGE combines a force threshold mechanism with a dynamics randomization scheme to enable robust transfer of the learned policies to the real robot. At deployment, FORGE policies, conditioned on a maximum allowable force, adaptively perform contact-rich tasks while avoiding aggressive and unsafe behaviour, regardless of the controller gains. Additionally, FORGE policies predict task success, enabling efficient termination and autonomous tuning of the force threshold. We show that FORGE can be used to learn a variety of robust contact-rich policies, including the forceful insertion of snap-fit connectors. We further demonstrate the multistage assembly of a planetary gear system, which requires success across three assembly tasks: nut threading, insertion, and gear meshing. 
           </p>
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
+    <!-- Demos. -->
     <section class="hero teaser">
       <div class="container is-max-desktop">
         <div class="hero-body">
@@ -176,12 +179,26 @@
       </div>
     </section>
 
+    <!--/ Snap-fit. -->
+    <section class="hero teaser">
+      <div class="container is-max-desktop">
+        <div class="hero-body">
+          <div class="columns is-centered">
+            <img src="./static/videos/snapfit-tuning-640-10.gif" />
+          </div>
+          <h2 class="subtitle has-text-centered">
+            <span class="dnerf">FORGE</span> can also be used for forceful tasks such as snap-fit insertion. When the required force is unknown, success prediction can be used for automatic tuning of the force threshold. This snap-fit buckle requires 15N of force.
+          </h2>
+        </div>
+      </div>
+    </section>
+
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Project Video</h2>
         <div class="publication-video">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/6rULFjEv4Kc?si=Jrmcxs4pDJ9k022M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/5WveyMyHX48?si=97m_9y6KbPUA6oH6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
